# Algorithms-Automated-Testing-Final-Project

./: README.md  node.h
Part1/: Makefile
Part2/SuffixArray/: CMakeLists.txt  randomGenerator.cpp  suffixArraySanityCheck.cpp  suffixArrayUnitTest (1).cpp  suffixArrayUnitTest.cpp  suffixTree-1.cpp  suffixTree.cpp
Part2/lexDFS/: CMakeLists (3).txt  lexDFSUnitTest.cpp  lexDFSsanityCheck.cpp  suffixTree (1).cpp
Program1Reference/: BoyerMoorePreprocessing.cpp  BoyerMoorePreprocessingTests.cpp  CMakeLists.txt  TwoAlgorithmVerificationSanityCheck.cpp  Zalgorithm.cpp  ZalgorithmSanityCheck.cpp  ZalgorithmTests.cpp  metadata.yml
Ukkonen-SuffixTree/: CMakeLists.txt  circStringLinearization.cpp  dfs  dfs.cpp  edge.h  longestCommonSubstring.cpp  main.cpp  randomGenerator.cpp  suffixArraySanityCheck.cpp  suffixTree (1).cpp  suffixTree.cpp  suffixTree.h  suffixTreeSanityCheck  suffixTreeSanityCheck (1).cpp  suffixTreeSanityCheck.cpp  suffixTreeUnitTests  suffixTreeUnitTests.cpp
